--- a/package.json
+++ b/package.json
@@ -12,23 +12,30 @@
   "dependencies": {
     "@craftzdog/react-native-buffer": "^6.0.4",
     "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-firebase/app": "^14.5.1",
+    "@react-native-firebase/auth": "^14.5.1",
+    "@react-native-firebase/storage": "^14.5.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.1",
     "base64-arraybuffer": "^1.0.2",
     "buffer": "^6.0.3",
+    "from": "^0.1.7",
+    "import": "^0.0.6",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-camera": "^4.2.1",
     "react-native-document-picker": "^8.0.0",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.19.0",
     "react-native-get-real-path": "github:Wraptime/react-native-get-real-path",
     "react-native-permissions": "^3.3.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.1.3",
     "react-native-screens": "^3.13.1",
-    "socket.io-client": "^4.4.1"
+    "socket.io-client": "^4.4.1",
+    "storage": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
